--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 ﻿Control&Chaos/UserSettings/EditorUserSettings.asset
+Control&Chaos/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Control&Chaos/fmod_editor.log
